force-app/main/default/objects/Borrow_History__c/Borrow_History__c.object-meta.xml
<CustomObject>
    <description>Borrowers History</description>
    <label>Borrow History</label>
    <nameField>
        <displayFormat>BRID-{0000}</displayFormat>
        <label>Borrow Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowers History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>