force-app/main/default/objects/Borrow_History__c/fields/Borrow_Date__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Date__c</fullName>
    <description>Book Borrowed date</description>
    <label>Borrow Date</label>
    <type>Date</type>
</CustomField>