force-app/main/default/objects/Borrow_History__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <description>Members name</description>
    <label>Member Name</label>
    <referenceTo>Members__c</referenceTo>
    <relationshipLabel>Borrowers History</relationshipLabel>
    <relationshipName>Borrowers_History</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>