force-app/main/default/objects/Borrow_History__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>Book&apos;s Return Date</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>