force-app/main/default/objects/Borrow_History__c/validationRules/Book_availability_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_availability_check</fullName>
    <active>true</active>
    <description>Books availabity check when borrowed</description>
    <errorConditionFormula>Book_Name__r.Available_Copies__c   &lt;= 0</errorConditionFormula>
    <errorMessage>This book is currently unavailable</errorMessage>
</ValidationRule>