force-app/main/default/objects/Borrow_History__c/validationRules/Member_borrow_limit_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_borrow_limit_check</fullName>
    <active>true</active>
    <description>Members borrowing limit is verified</description>
    <errorConditionFormula>Member_Name__r.Active_borrow_count__c &gt;= Member_Name__r.Max_books_allowed__c</errorConditionFormula>
    <errorMessage>Member has reached the maximum number of allowed borrowed books.</errorMessage>
</ValidationRule>