force-app/main/default/objects/Borrow_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_Name__c</columns>
    <columns>Member_Name__c</columns>
    <columns>Borrow_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Return_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>